--- a/apps/docs/.storybook/styles.css
+++ b/apps/docs/.storybook/styles.css
@@ -1,6 +1,6 @@
 @layer theme, base, components, utilities;
 
-@import 'tailwindcss/theme.css' layer(theme) source("../src");
+@import 'tailwindcss/theme.css' layer(theme) source('../src');
 @import 'tailwindcss/utilities.css' layer(utilities);
 @import '@digital-agency-design-system-with-primevue/theme/preflight' layer(base);
 @import '@digital-agency-design-system-with-primevue/theme/design-tokens' layer(theme);
