--- a/packages/components/src/storybook/review-head.html
+++ b/packages/components/src/storybook/review-head.html
@@ -1,2 +1,8 @@
-<link rel="preload" as="font" type="font/woff2" href="/fonts/NotoSansJP-Regular.woff2" crossorigin>
-<link rel="preload" as="font" type="font/woff2" href="/fonts/NotoSansJP-Bold.woff2" crossorigin>
+<link
+  rel="preload"
+  as="font"
+  type="font/woff2"
+  href="/fonts/NotoSansJP-Regular.woff2"
+  crossorigin
+/>
+<link rel="preload" as="font" type="font/woff2" href="/fonts/NotoSansJP-Bold.woff2" crossorigin />
